--- a/styles/basic.css
+++ b/styles/basic.css
@@ -18,6 +18,12 @@ a{
     text-decoration: none;
     color:unset
 }
+h1,h2,h3,h4,h5,h6{
+    margin: 0;
+}
+p{
+    margin: 0;
+}
 
 .container{
     max-width: 1400px;
