--- a/styles/basic.css
+++ b/styles/basic.css
@@ -18,10 +18,7 @@ a{
     text-decoration: none;
     color:unset
 }
-h1,h2,h3,h4,h5,h6{
-    margin: 0;
-}
-p{
+h1,h2,h3,h4,h5,h6,p,figure{
     margin: 0;
 }
 
