--- a/styles/success.css
+++ b/styles/success.css
@@ -66,7 +66,7 @@
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   aspect-ratio: 158/91;
   border-radius: 16px;
 }
@@ -97,4 +97,4 @@
   .success__desc {
     font-size: 20px;
   }
-}/*# sourceMappingURL=success.css.map */
+}
