--- a/index.css
+++ b/index.css
@@ -9,3 +9,4 @@
 @import url(styles/product.css);
 @import url(styles/person-card.css);
 @import url(styles/footer.css);
+@import url(styles/mob-nav.css);
