--- a/styles/header.css
+++ b/styles/header.css
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   -moz-column-gap: min(70px, 4vw);
-       column-gap: min(70px, 4vw);
+  column-gap: min(70px, 4vw);
 }
 
 .header__nav-link {
@@ -32,20 +32,30 @@
   align-items: center;
   flex-wrap: nowrap;
   -moz-column-gap: 10px;
-       column-gap: 10px;
+  column-gap: 10px;
 }
 
 @media (max-width: 992px) {
   .header__nav-link {
     font-size: 16px;
   }
-  .btn {
+  .header__actions .btn {
     width: 120px;
     font-size: 16px;
   }
 }
 @media (max-width: 768px) {
+  .header__wrapper{
+    padding: 0 0 0 45px;
+  }
   .header__nav {
     display: none;
   }
-}/*# sourceMappingURL=header.css.map */
+}
+
+@media(max-width:390px){
+  .header__actions .btn{
+    width: 90px;
+    font-size: 14px;
+  }
+}
